# countries-informator-bot

./: .env.save  .gitignore  README.md  docker-compose.yaml  postgres-redis-local.yaml  setup.cfg
backend/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt  tests.py
backend/backend/: celery.py  settings.py  urls.py
backend/core/: HTTPclient.py  admin.py  clientAPI.py  models.py  modelsAPI.py  serializers.py  tasks.py  urls.py  views.py
backend/core/APICLients/: InterfaceAPI.py  currencyConstants.py  weatherConstants.py
backend/core/APICLients/externalAPI/: __init__.py  city_country.py  currency.py  weather.py
backend/core/APICLients/externalAPIForTests/: cityTest.py  currencyTest.py  weatherTest.py
frontend/: Dockerfile  HTTPClient.py  externalAPI.py  loader.py  main.py  pyproject.toml  settings.py  states.py  tests.py
frontend/handlers/: __init__.py
frontend/handlers/errors/: error_handler.py
frontend/handlers/main/: __init__.py  commands.py  main.py
frontend/text/: inline.py  keyboard.py  schemas.py
frontend/utils/: dependencies.py  setup_logging.py
nginx/: default.conf
